fix(ui): hide scrollbar to fix layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,4 +30,15 @@
   .external-link {
     @apply underline decoration-stone-500 decoration-1 underline-offset-[2.5px] transition-colors hover:decoration-stone-400;
   }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
